--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,16 @@
 {
   "main": "src/server.js",
   "type": "module",
-  "scripts": { "dev": "nodemon src/server.js" }
+  "scripts": {
+    "dev": "nodemon src/server.js"
+  },
+  "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
+    "dot": "^1.1.3",
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0",
+    "mongoose": "^8.17.1",
+    "nodemon": "^3.1.10"
+  }
 }
