--- a/backend/package.json
+++ b/backend/package.json
@@ -1,16 +1,20 @@
 {
-  "main": "src/server.js",
+  "name": "node-express-mongo-backend",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon src/server.js",
+    "start": "node src/server.js"
   },
   "dependencies": {
-    "bcryptjs": "^3.0.2",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dot": "^1.1.3",
-    "dotenv": "^17.2.1",
-    "express": "^5.1.0",
-    "mongoose": "^8.17.1",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mongoose": "^7.0.3",
+    "jsonwebtoken": "^9.0.0"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.10"
   }
 }
