--- a/backend/package.json
+++ b/backend/package.json
@@ -9,10 +9,11 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dot": "^1.1.3",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "mongoose": "^7.0.3",
-    "jsonwebtoken": "^9.0.0"
+    "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.8.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
