--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
-MONGODB_URI=mongodb+srv://davidbicho200419:Kjvf5uJAPboafRND@cluster0.4xcopwl.mongodb.net/REDU?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=CLUSTER TO MONGODB
 PORT=5000
 CORS_ORIGIN=http://localhost:5173
 NODE_ENV=development
-GEMMINI_API_KEY=AIzaSyDkX4LHSGbHhweVJM_K68L6PC0HxdWKOmM
-GEMMINI_API_URL=https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent
+GEMMINI_API_KEY=APIKEY
+GEMMINI_API_URL=APIURL
